# learning-opengl-in-a-week

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.zed/: debug.json  tasks.json
assets/shaders/: Basic.frag  Basic.vert  BasicF.glsl  BasicV.glsl  Fragment.glsl  Phong.frag  Phong.vert  PhongF.glsl  PhongV.glsl  Vertex.glsl  advanced_phong.frag  basic.vert  basic_phong.frag  depth.frag  flat_color.frag  framebuffer.frag  framebuffer.vert  light.frag  light.vert  model_phong.frag  phong.frag  phong.vert  phong_with_fog.frag  skybox.frag  skybox.vert
shaders/: basic-vertex.glsl
src/: Camera.cpp  Camera.h  Error.cpp  Error.h  Light.cpp  Light.h  Main.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  camera.cpp  camera.h  error.cpp  error.h  light.cpp  light.h  main.cpp  material.cpp  material.h  model.cpp  model.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transform.cpp  utilities.cpp  utilities.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp
src/scenes/: advanced_opengl.cpp  model_loading.cpp  phong.cpp  scenes.h  utilities.cpp
